# semafor

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: publish-image.yml
src/: api.rs  args.rs  bakalari.rs  cli.rs  main.rs
src/api/: bakalari.rs  config.rs  display.rs  moder.rs  state.rs  util.rs
src/api/bakalari/: timetabler.rs
