[package]
name = "semafor"
authors = ["MaximMaximS"]
version = "0.1.0"
edition = "2021"
license = "MIT-0"

[dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
chrono = "0.4"
chrono-tz = "0.9"
clap = { version = "4.5", features = ["derive", "env"] }
rezvrh_scraper = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5.1"
