[package]
name = "semafor"
authors = ["MaximMaximS"]
version = "0.1.0"
edition = "2021"
license = "MIT-0"
description = "Semafor controller"
repository = "https://github.com/MaximMaximS/semafor"
keywords = ["semafor"]
categories = ["web-programming::http-server"]

[dependencies]
anyhow = "1.0"
axum = "0.7"
axum-auth = "0.7.0"
base64 = "0.22"
chrono = "0.4"
chrono-tz = "0.9"
clap = { version = "4.5", features = ["derive", "env"] }
derive_more = "1.0"
rezvrh_scraper = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5.1"
